src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Assingment_End_Date__c</fullName>
        <label>Assingment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assingment_Start_Date__c</fullName>
        <label>Assingment Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employe_Id__c</fullName>
        <label>Employe Id</label>
        <referenceTo>HRM_Employee_Detail__c</referenceTo>
        <relationshipLabel>Project R</relationshipLabel>
        <relationshipName>ProjectREmployeeDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager Name</label>
        <referenceTo>Maneger__c</referenceTo>
        <relationshipLabel>Project_manager_R</relationshipLabel>
        <relationshipName>Project_manager_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>